# pacnews

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  pacnews.go
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: config.rs  entry.rs  feed.rs  main.rs  markdown.rs  pacman.rs
tests/: cli.rs
