[package]
name = "pacnews"
version = "2.4.2"
description = "Read the latest Arch Linux news in your terminal with a single command"
authors = ["Alessio Biancalana <dottorblaster@gmail.com>"]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
alpm = "4.0.3"
clap = { version = "4.5.45", features = ["cargo", "derive"] }
colored = "3.0.0"
html2text = "0.16.4"
rss = "2.0.12"
reqwest = { version = "0.12.24", features = ["blocking"] }
termimad = "0.34.1"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
